--- a/index.html
+++ b/index.html
@@ -7,7 +7,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Git and Github</h1>
-    <h2>hello world</h2>
+    <header class="header">
+        <nav class="header__nav">
+            <div class="container">
+                <a href="#!" class="nav__logo">Logo</a>
+                <ul class="nav__list">
+                    <li class="nav__ite"><a href="#!" class="nav__link">home</a></li>
+                    <li class="nav__ite"><a href="#!" class="nav__link">home</a></li>
+                    <li class="nav__ite"><a href="#!" class="nav__link">home</a></li>
+                    <li class="nav__ite"><a href="#!" class="nav__link">home</a></li>
+                    <li class="nav__ite"><a href="#!" class="nav__link">home</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
