header title add

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 </ul>
             </div>
         </nav>
+        <h1 class="header__title">Git and Github</h1>
     </header>
 </body>
 </html>
