--- a/index.html
+++ b/index.html
@@ -22,5 +22,20 @@
         </nav>
         <h1 class="header__title">Git and Github</h1>
     </header>
+    <main>
+        <section class="mains">
+            <div class="container">
+                <h1 class="h1__section">git and github</h1>
+                <div class="sections"> 
+                    <ul class="section__ul">
+                        <li class="section__link"><a href="#!" class="section__a">hello</a></li>
+                        <li class="section__link"><a href="#!" class="section__a">hello</a></li>
+                        <li class="section__link"><a href="#!" class="section__a">hello</a></li>
+                        <li class="section__link"><a href="#!" class="section__a">hello</a></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
