--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section class="mains">
             <div class="container">
                 <h1 class="h1__section">git and github</h1>
-                <div class="sections"> 
+                <div class="section__sect"> 
                     <ul class="section__ul">
                         <li class="section__link"><a href="#!" class="section__a">hello</a></li>
                         <li class="section__link"><a href="#!" class="section__a">hello</a></li>
