--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-   
+   <h1>git and github</h1>
+   <p>
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate, voluptatum? Distinctio, laboriosam assumenda fugiat accusamus et expedita dolorum quam cumque placeat corporis dicta at atque eos vel voluptatem suscipit quisquam!
+   </p>
 </body>
 </html>
